# cmake_bestPractise

./: CMakeLists.txt  LICENSE  README.md  build.sh
Main/: CMakeLists.txt  Main  Makefile  cmake_install.cmake  main.cpp
ModuleA/: CMakeLists.txt  Makefile  ModuleA.cpp  ModuleA.h  cmake_install.cmake
ModuleB/: CMakeLists.txt  Makefile  ModuleB.cpp  ModuleB.h  cmake_install.cmake
